# singly-linked-list

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.ps1  build.sh
include/: list_c.h  single_list.h
scripts/: build.ps1  build.sh
src/: list_c.c  single_list.c
tests/: great_test.cpp  list_test.cpp  slist_back_item.cpp  slist_bogosort.cpp  slist_concat.cpp  slist_filter.cpp  slist_pop_back.cpp  slist_pop_front.cpp  slist_sort.cpp  slist_splice.cpp  test_utils.cpp
tests/include/: slist_append.hpp  slist_at.hpp  slist_insert.hpp  slist_pop_back.hpp  slist_pop_front.hpp  slist_prepend.hpp  slist_remove.hpp  slist_remove_all.hpp  slist_remove_at.hpp  slist_set.hpp  slist_sort.hpp  slist_trim_front.hpp  test_base.hpp  test_utils.h
tests/utils/: test_fixtures.hpp  test_utils.hpp
